--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-
-SITE_NAME_HEADER=Digital Garden
+THEME=https://raw.githubusercontent.com/insanum/obsidian_nord/HEAD/theme.css
+BASE_THEME=dark
+SITE_NAME_HEADER=Yyoverse
 SITE_BASE_URL=glistening-taffy-4cecf9.netlify.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -12,11 +13,11 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
-dgShowFileTree=false
-dgEnableSearch=false
-dgShowToc=false
-dgLinkPreview=false
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
 dgShowTags=false
